syntax = "proto3";

option java_package = "protobuf";

service Slaughterhouse { //That is the API
  rpc GetProductsByAnimal(ProductListRequest) returns (ProductListResponse);
  rpc GetAnimalsByProduct(AnimalListRequest) returns (AnimalListResponse);
  rpc GetAllRegistered(emptyMessage) returns (AllAnimalsMessage);
  rpc GetByDate(Date)  returns (AllAnimalsMessage);
  rpc GetByRegNum(RegNum) returns (Animal);
  rpc GetByProductId(ProductId) returns (AllAnimalsMessage);
  rpc GetByOrigin(Farm) returns (AllAnimalsMessage);
  rpc Add(Animal) returns (boolResponse);
  rpc Change(Animal) returns (boolResponse);
  rpc Remove(RegNum) returns (boolResponse);
}

message Animal {
  string registrationDate = 1;
  int32 registration_number = 2;
  double weight = 3;
  string origin = 4;
}
message emptyMessage{
  string string1 = 1;
}

message Date{
  string date = 1;
}

message boolResponse{
  bool boolBABY = 1;
}
message RegNum{
  int32 RegNum = 1;
}
message ProductId{
  int32 productId = 1;
}

message Farm{
  string farm = 1;
}
message AllAnimalsMessage{
  repeated Animal animals = 1;
}

message AnimalPart {
  string registration_number = 1;
  double weight = 2;
}

message Tray {
  int32 id = 1;
  repeated AnimalPart parts = 2;
}

message Product {
  int32 id = 1;
  repeated Tray trays = 2;
}

message ProductDto{
  int32 id = 1;
}

message ProductListRequest {
  int32 animal_registration_number = 1;
}

message ProductListResponse {
  repeated ProductDto products = 1;
  int32 code = 2;
}

message AnimalListRequest {
  int32 product_id = 1;
}

message AnimalListResponse {
  repeated int32 regNum = 1;
  int32 code = 2;
}